--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,20 +29,25 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
-      
-    - uses: actions/checkout@v4
-      with:
-        sparse-checkout: 'README.md'
+      run: echo "Hello ${{ inputs.name }}" >> $GITHUB_STEP_SUMMARY
 
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v4.3.3
-      with:
-       # Artifact name
-       name: 'build-artifacts'
-       # A file, directory or wildcard pattern that describes what to upload
-       path: |
-         ${{ github.workspace }}/*.md
-         ${{ github.workspace }}/CODEOWNERS         
-       # The desired behavior if no files are found using the provided path.
+  package:
+    runs-on: ubuntu-latest
+    needs: greet
+    steps:
+      - name: Checkout Local Repo
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: 'README.md'
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v4.3.3
+        with:
+         # Artifact name
+         name: 'build-artifacts'
+         # A file, directory or wildcard pattern that describes what to upload
+         path: |
+           #${{ github.workspace }}/*.md
+           ${{ github.workspace }}/CODEOWNERS         
+         # The desired behavior if no files are found using the provided path.
           
