--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,15 +39,19 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: 'README.md'
+          sparse-checkout-cone-mode: false
+
+      - name: list directory
+        run: |
+          ls ${{ github.workspace }}
 
       - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v4.3.3
+        uses: actions/upload-artifact@v4
         with:
          # Artifact name
          name: 'build-artifacts'
          # A file, directory or wildcard pattern that describes what to upload
          path: |
-           #${{ github.workspace }}/*.md
-           ${{ github.workspace }}/CODEOWNERS         
-         # The desired behavior if no files are found using the provided path.
+           ${{ github.workspace }}/*.md
+           #${{ github.workspace }}/CODEOWNERS
           
